Fix overflow-y scroll in medium device

--- a/src/app/picker/dialog.component.scss
+++ b/src/app/picker/dialog.component.scss
@@ -12,7 +12,12 @@
   width: 100vw;
   max-width: 666px;
   height: 100%;
+  overflow: hidden;
   overflow-y: scroll;
+
+  @include respond-to(medium) {
+    overflow-y: hidden;
+  }
 }
 
 .picker-dropdown {
